--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "ngOpenWeatherMap",
   "version": "1.0.0",
-  "main": "Gruntfile.js",
+  "main": "gruntfile.js",
   "devDependencies": {
     "grunt": "^0.4.5",
     "grunt-cli": "^0.1.13",
