--- a/bower.json
+++ b/bower.json
@@ -1,5 +1,5 @@
 {
-  "name": "ng-openweathermap",
+  "name": "ngOpenWeatherMap",
   "authors": [
     "Michael Fladischer <michael@openservices.at>"
   ],
