--- a/package.json
+++ b/package.json
@@ -10,5 +10,8 @@
     "grunt-contrib-uglify": "^0.9.1",
     "jshint-stylish": "^1.0.2"
   },
-  "dependencies": {}
+  "dependencies": {},
+  "scripts": {
+    "test": "grunt travis"
+  }
 }
